--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpacktemplate",
-  "version": "1.0.0",
-  "description": "My template",
+  "name": "WebPackLayout",
+  "version": "1.0.1",
+  "description": "demo",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --open --config ./build/webpack.dev.conf.js",
@@ -38,7 +38,7 @@
     "samsung 7.2",
     "samsung 6.2"
   ],
-  "author": "Demo",
+  "author": "Fobiya",
   "repository": {
     "type": "git",
     "url": ""
@@ -58,6 +58,7 @@
   "devDependencies": {
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
+    "@splidejs/splide": "^4.1.4",
     "autoprefixer": "^9.4.4",
     "babel-loader": "^8.0.4",
     "copy-webpack-plugin": "^4.6.0",
@@ -86,8 +87,6 @@
   },
   "dependencies": {
     "@fancyapps/fancybox": "^3.3.5",
-    "fabric": "^4.6.0",
-    "jquery": "^2.1.3",
-    "slick-carousel": "^1.8.1"
+    "jquery": "^3.6.1"
   }
 }
